<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">DTube</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="video_error">Error loading video</string>
    <string name="login">Login</string>
    <string name="login_comment">Login to comment</string>
    <string name="comment_placeholder">Add public comment</string>
    <string name="reply">Reply</string>
    <string name="subscribers">Subscribers</string>
    <string name="videos_by">Videos by</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="login_dtube">Login to d.tube</string>
    <string name="home">Home</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Select your favorite method of payment to send any amount to the developer of this app. Your support is greatly appreciated ♥♥♥</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="my_profile">My Profile</string>
    <string name="feed">Feed</string>
    <string name="feed_subscribed">Subscribed Feed</string>
    <string name="feed_hot">Hot Videos</string>
    <string name="feed_trending">Trending Videos</string>
    <string name="feed_new">New Videos</string>
    <string name="feed_history">Watch Again</string>
    <string name="copied">Copied to clipboard</string>
    <string name="sub_item">Sub items</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="username">Username</string>
    <string name="password">Private posting key (not master password)</string>
    <string name="search">Search</string>
    <string name="update_now">Update now</string>
    <string name="later">Update later</string>
    <string name="update_available">Update available</string>
    <string name="update_summary">Update to get the latest features!</string>
    <string name="do_not_show">Do not show again</string>
    <string name="wrong_qr_code">Please click on the QR code on Steemit first before scanning</string>
    <string name="no_data_qr_code">No data found</string>
    <string name="replies">View Replies</string>
    <string name="login_for_subs">Please login to see your subscription feed</string>
    <string name="remove_history">Remove video from watch history?</string>
    <string name="upvote_us">Upvote our app <a href="https://steemit.com/steemdev/@immawake/dtube-android-unoffficial-minor-updates">post on Hive/Steemit</a> upon login to help support our Android app! </string>
    <string name="follow_us">Follow our DTube account <a href="https://hive.blog/@immawake">@immawake</a> upon login to see updates about our Android app! </string>
    <string name="follow_us_avalon">Follow our DTube account <a href="https://d.tube/#!/c/luciddevteam01">@luciddevteam01</a> upon login to see updates about our Android app! </string>

    <string name="like_comment">Like Comment</string>
    <string name="dislike_comment">Dislike Comment</string>

    <string name="more_apps">More apps</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="ui_settings">UI Settings</string>

    <string name="login_failed">Login Failed. Please make sure your username and password are correct</string>
    <string name="help">Help</string>
    <string name="upload">Upload</string>

    <string name="logout">Logout</string>
    <string name="logout_all">Logout All Accounts</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>

    <string name="webview_alert">For proper functioning of this app, Android System Webview must be installed</string>
    <string name="install">Install Now</string>
    <string name="upgrade">Upgrade</string>

    <string name="pip_upgraded_message">Congrats! You now have the picture-in-picture feature. Press the back button when playing a video to activate it.</string>
    <string name="okay">Okay</string>
    <string name="dismiss">Dismiss</string>
    <string name="create_account">Create Account</string>
    <string name="clear_history">Clear History</string>
    <string name="no_history">No saved history</string>
    <string name="hivesearcher_url">Powered by <![CDATA[<a href="https://hivesearcher.com/">HiveSearcher</a>]]></string>
    <string name="hive">Hive</string>
    <string name="avalon">Avalon</string>
    <string name="steemit">Steemit</string>

    <string name="manage_accounts">Manage Accounts</string>
</resources>
