<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:padding="20dp">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/dtube" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_holder"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="12dp"
            android:paddingRight="35dp"
            android:layout_toStartOf="@+id/imageView5" />

        <ImageView
            android:id="@+id/qr_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:padding="1dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:focusable="true"
            android:onClick="qrButtonClicked"
            android:clickable="true"
            app:srcCompat="@drawable/qr" />


    </FrameLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/upvote_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/upvote_switch"
            android:padding="5dp"
            android:textSize="10dp"
            android:text="@string/upvote_us" />

        <Switch
            android:id="@+id/upvote_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:switchPadding="10dp"
            android:checked="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/follow_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/follow_switch"
            android:padding="5dp"
            android:textSize="10dp"
            android:text="@string/follow_us" />

        <Switch
            android:id="@+id/follow_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:switchPadding="10dp"
            android:checked="true"/>

    </RelativeLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"

        android:focusable="true"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="loginButtonClicked">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/login" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_exit_to_app" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="helpButtonClicked">

            <TextView
                android:id="@+id/textViewHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:textStyle="bold"
                android:text="@string/help" />

            <ImageView
                android:id="@+id/imageView5Help"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_help_outline" />

        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/steemit" />
    </LinearLayout>

</LinearLayout>